--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 
 .four_zero_four_bg{
  
- background-image: url(https://cdn.dribbble.com/users/285475/screenshots/2083086/dribbble_1.gif);
+ background-image: url(https://https://raw.githubusercontent.com/mnmyounus/ysocial/refs/heads/main/y.jpg);
     height: 400px;
     background-position: center;
  }
