--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 
 .four_zero_four_bg{
  
- background-image: url(https://https://raw.githubusercontent.com/mnmyounus/ysocial/refs/heads/main/y.jpg);
+ background-image:"y.jpg"
     height: 400px;
     background-position: center;
  }
